--- a/src/app/components/empleado-list/empleado-list.component.html
+++ b/src/app/components/empleado-list/empleado-list.component.html
@@ -1,1 +1,26 @@
-<p>empleado-list works!</p>
+<div class="container mx-auto px-4 pt-3 pb-7">
+  <h1 class="text-2xl font-bold my-4">Empleados</h1>
+  <div class="overflow-x-auto">
+    <table class="min-w-full bg-white border border-gray-200">
+      <thead>
+        <tr class="bg-gray-100">
+          <th class="py-2 px-4 border-b">#</th>
+          <th class="py-2 px-4 border-b">Cargo</th>
+          <th class="py-2 px-4 border-b">Nombre</th>
+          <th class="py-2 px-4 border-b">Edad</th>
+          <th class="py-2 px-4 border-b">Salario</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- <tr *ngFor="let cripto of criptos; let i = index" class="hover:bg-gray-50">
+          <td class="py-2 px-4 border-b">{{ i + 1 }}</td>
+          <td class="py-2 px-4 border-b">{{ cripto.name }}</td>
+          <td class="py-2 px-4 border-b">{{ cripto.symbol | uppercase }}</td>
+          <td class="py-2 px-4 border-b">{{ cripto.current_price | currency:'USD' }}</td>
+          <td class="py-2 px-4 border-b">{{ cripto.market_cap | number }}</td>
+          <td class="py-2 px-4 border-b">{{ cripto.total_volume | number }}</td>
+        </tr> -->
+      </tbody>
+    </table>
+  </div>
+</div>
